--- a/index.html
+++ b/index.html
@@ -3,10 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BOOK_STORY</title>
-    <link rel="stylesheet" href="style.css">
+    <title>BOOKSTORY</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="main.css" />
 </head>
+
 <body>
-    
+    <header class="header">
+        <nav class="nav">
+            <ul class="nav-list">
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="#books">BOOKS</a></li>
+                <li><a href="#new">NEW</a></li>
+                <li><a href="#mypage">MYPAGE</a></li>
+                <li><a href="#login">LOGIN</a></li>
+                <li><a href="#signup">SIGNUP</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section class="section">
+        d
+    </section>
+
+    <footer class="footer">
+d
+    </footer>
 </body>
 </html>
