--- a/index.html
+++ b/index.html
@@ -8,28 +8,37 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="main.css" />
+    <script src="https://kit.fontawesome.com/2c827c8cca.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <header class="header">
-        <nav class="nav">
-            <ul class="nav-list">
-                <li><a href="index.html">HOME</a></li>
-                <li><a href="#books">BOOKS</a></li>
-                <li><a href="#new">NEW</a></li>
-                <li><a href="#mypage">MYPAGE</a></li>
-                <li><a href="#login">LOGIN</a></li>
-                <li><a href="#signup">SIGNUP</a></li>
-            </ul>
-        </nav>
+        <h2>BOOKSTORY</h2>
     </header>
 
+    <nav class="nav">
+        <a href="index.html">HOME</a> 
+        <a href="#books">BOOKS</a>
+        <a href="#new">NEW</a>
+        <a href="#mypage">MYPAGE</a>
+        <a href="#login">LOGIN</a>
+        <a href="#signup">SIGNUP</a>
+    </nav>
+
     <section class="section">
-        d
+        <img src="images/main.jpg" alt="background">
+            <div class="search-container">
+                <div class="search-wrapper">
+                    <i class="fa-solid fa-magnifying-glass search-icon"></i>
+                    <input type="text" placeholder="책 제목을 검색해 보세요." class="search-box">
+                </div>
+            </div>
     </section>
 
     <footer class="footer">
-d
+        <div>
+            Copyright ⓒ 주식회사 BOOKSTORY All Rights Reserved
+        </div>
     </footer>
 </body>
 </html>
