부트스트랩 다시 하는 중

--- a/main.html
+++ b/main.html
@@ -17,15 +17,15 @@
     </header>
 
     <nav class="nav">
-        <a href="index.html">HOME</a> 
-        <a href="#books">BOOKS</a>
-        <a href="#new">NEW</a>
+        <a href="main.html">HOME</a> 
+        <a href="company.html">COMPANY</a>
+        <a href="book.html">BOOKS</a>
         <a href="#mypage">MYPAGE</a>
         <a href="#login">LOGIN</a>
         <a href="#signup">SIGNUP</a>
     </nav>
 
-    <section class="section">
+    <main class="main">
         <img src="images/main.jpg" alt="background">
             <div class="search-container">
                 <div class="search-wrapper">
@@ -33,11 +33,11 @@
                     <input type="text" placeholder="책 제목을 검색해 보세요." class="search-box">
                 </div>
             </div>
-    </section>
+    </main>
 
     <footer class="footer">
         <div>
-            Copyright ⓒ 주식회사 BOOKSTORY All Rights Reserved
+            ⓒ 2024 BOOKSTORY 
         </div>
     </footer>
 </body>
