--- a/book.html
+++ b/book.html
@@ -4,29 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BOOKS</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="new_book.css" />
+    <link rel="stylesheet" href="book.css" />
 </head>
 <body>
-    <header class="header">
-        <h1>BOOKSTORY</h1>
-        <nav>
-            <a href="main.html">HOME</a> 
-            <a href="book.html">BOOKS</a>
-            <a href="new_book.html">NEW</a>
-        </nav>
-    </header>
-
-    <main class="main">
-        
-    </main>
-
-    <footer class="footer">
-        <p>ⓒ 2024 BOOKSTORY</p>
-    </footer>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <nav>
+        <div>
+            <img src="./images/logo.png" width="240" class="nav-logo">
+        </div>
+        <div>
+            <a href="main.html" class="nav-item">HOME</a> 
+            <a href="book.html" class="nav-item">BOOKS</a>
+            <a href="company.html" class="nav-item">COMPANY</a>
+            <a href="#mypage" class="nav-item">MYPAGE</a>
+            <a href="#login" class="nav-item">LOGIN</a>
+            <a href="#signup" class="nav-item">SIGNUP</a>
+        </div>
+    </nav>
 </body>
 </html>
