파일 이름 수정

--- a/book.html
+++ b/book.html
@@ -12,7 +12,7 @@
             <img src="./images/logo.png" width="240" class="nav-logo">
         </div>
         <div>
-            <a href="main.html" class="nav-item">HOME</a> 
+            <a href="index.html" class="nav-item">HOME</a> 
             <a href="book.html" class="nav-item">BOOKS</a>
             <a href="company.html" class="nav-item">COMPANY</a>
             <a href="#mypage" class="nav-item">MYPAGE</a>
