--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
 
     <nav class="nav">
-        <a href="main.html">HOME</a> 
+        <a href="index.html">HOME</a> 
         <a href="book.html">BOOKS</a>
         <a href="company.html">COMPANY</a>
         <a href="#mypage">MYPAGE</a>
