--- a/book.html
+++ b/book.html
@@ -3,22 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BOOKS</title>
-    <link rel="stylesheet" href="book.css" />
+    <title>BOOK</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-    <nav>
-        <div>
-            <img src="./images/logo.png" width="240" class="nav-logo">
+    <nav class="navbar bg-body-tertiary fixed-top">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">BOOKSTORY</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+            <div class="offcanvas-header">
+              <h5 class="offcanvas-title" id="offcanvasNavbarLabel">MENU</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+            </div>
+            <div class="offcanvas-body">
+              <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                <li class="nav-item">
+                  <a class="nav-link" href="index.html">HOME</a>
+                  <a class="nav-link" href="book.html">BOOKS</a>
+                  <a class="nav-link" href="#company">COMPANY</a>
+                  <a class="nav-link" href="##mypage">MYPAGE</a>
+                  <a class="nav-link" href="#login">LOGIN</a>
+                  <a class="nav-link" href="#signup">SIGNUP</a>
+                </li>
+              </ul>
+              <form class="d-flex mt-3" role="search">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Search</button>
+              </form>
+            </div>
+          </div>
         </div>
-        <div>
-            <a href="index.html" class="nav-item">HOME</a> 
-            <a href="book.html" class="nav-item">BOOKS</a>
-            <a href="company.html" class="nav-item">COMPANY</a>
-            <a href="#mypage" class="nav-item">MYPAGE</a>
-            <a href="#login" class="nav-item">LOGIN</a>
-            <a href="#signup" class="nav-item">SIGNUP</a>
-        </div>
-    </nav>
+      </nav>
+
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
