--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <nav class="nav">
         <a href="index.html">HOME</a> 
         <a href="book.html">BOOKS</a>
-        <a href="company.html">COMPANY</a>
+        <a href="#company">COMPANY</a>
         <a href="#mypage">MYPAGE</a>
         <a href="#login">LOGIN</a>
         <a href="#signup">SIGNUP</a>
