--- a/event.html
+++ b/event.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BOOK</title>
+    <title>EVENT</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link rel="stylesheet" href="event.css" />
@@ -28,8 +28,8 @@
                 <li class="nav-item">
                   <a class="nav-link" href="index.html">HOME</a>
                   <a class="nav-link" href="event.html">EVENT</a>
+                  <a class="nav-link" href="#book">BOOK</a>
                   <a class="nav-link" href="#company">COMPANY</a>
-                  <a class="nav-link" href="#mypage">MYPAGE</a>
                   <a class="nav-link" href="#login">LOGIN</a>
                   <a class="nav-link" href="#signup">SIGNUP</a>
                 </li>
@@ -115,7 +115,7 @@
                     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/09/Flag_of_South_Korea.svg/188px-Flag_of_South_Korea.svg.png" width=16 height=12 />
                     South Korea
                 </div>
-                <div class="col"><a href="#">회사소개</a></div>
+                <div class="col"><a href="company.html">회사소개</a></div>
                 <div class="col"><a href="#">이용약관</a></div>
                 <div class="col"><a href="#">고객문의</a></div>
                 <div class="col"><a href="#">인스타그램</a></div>
