이벤트 페이지 완성

--- a/book.html
+++ b/book.html
@@ -45,13 +45,13 @@
       <div id="carouselExample" class="carousel slide">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="images/event/e_carousel_1.jpg" class="d-block w-100" alt="취준생 추천도서">
+            <img src="https://contents.kyobobook.co.kr/pmtn/2022/event/30a17788fd0e4d87ba3d48e03813a41e.png" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="images/event/e_carousel_2.jpg" class="d-block w-100" alt="선재 업고 튀어 이벤트">
+            <img src="https://contents.kyobobook.co.kr/pmtn/2024/event/a40f2ef101bd4b0e805450bca8b2a24f.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="images/event/e_carousel_3.jpg" class="d-block w-100" alt="신규회원 이벤트">
+            <img src="https://contents.kyobobook.co.kr/pmtn/2024/event/20e2e1b5858945c9b460ca25209d5a42.jpg" class="d-block w-100" alt="...">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
