--- a/event.html
+++ b/event.html
@@ -45,13 +45,13 @@
       <div id="carouselExample" class="carousel slide">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="https://contents.kyobobook.co.kr/pmtn/2022/event/30a17788fd0e4d87ba3d48e03813a41e.png" class="d-block w-100" alt="...">
+            <img src="images/event/e_carousel_1.jpg" class="d-block w-100" alt="취준생 추천도서">
           </div>
           <div class="carousel-item">
-            <img src="https://contents.kyobobook.co.kr/pmtn/2024/event/a40f2ef101bd4b0e805450bca8b2a24f.jpg" class="d-block w-100" alt="...">
+            <img src="images/event/e_carousel_2.jpg" class="d-block w-100" alt="선재 업고 튀어 이벤트">
           </div>
           <div class="carousel-item">
-            <img src="https://contents.kyobobook.co.kr/pmtn/2024/event/20e2e1b5858945c9b460ca25209d5a42.jpg" class="d-block w-100" alt="...">
+            <img src="images/event/e_carousel_3.jpg" class="d-block w-100" alt="신규회원 이벤트">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -67,37 +67,60 @@
       <!-- 추천 이벤트 -->
       <div class="text-center mt-3 mb-3">
         <h2>이달의 이벤트</h2>
-        <button type="button" class="btn btn-outline-success">경품</button>
-        <button type="button" class="btn btn-outline-success">기획전</button>
-        <button type="button" class="btn btn-outline-success">사은품</button>
-        <button type="button" class="btn btn-outline-success">할인전</button>
+        <div class="mt-4">
+          <button type="button" class="btn btn-outline-success" onclick="eventCard('gift')">사은품</button>
+          <button type="button" class="btn btn-outline-success" onclick="eventCard('discount')">할인전</button>
+          <button type="button" class="btn btn-outline-success" onclick="eventCard('promotion')">기획전</button>
+        </div>
       </div>
 
       <div class="container pt-5 mb-5">
         <div class="row">
-          <div class="col-md-4 col-sm-12">
+          <div class="col-md-4 col-sm-12 event-card gift">
             <div class="card">
-              <img src="images/event/event_1.jpg" class="card-img-top" alt="...">
+              <img src="images/event/gift_1.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h6 class="card-text text-center">[BOOKSTORY 단독] 어린이를 위한 돈의 속성 곰돌이 인형 네임택 증정</h6>
                 </div>
               </div>
-            </div>  
-            
-          <div class="col-md-4 col-sm-12">
+            </div>              
+          <div class="col-md-4 col-sm-12 event-card gift">
             <div class="card">
-              <img src="images/event/event_2.jpg" class="card-img-top" alt="...">
+              <img src="images/event/gift_2.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h6 class="card-text text-center">[BOOKSTORY 단독] 봉태규 『괜찮은 어른이 되고 싶어서』 출간 - 아크릴 코스터</h6>
+              </div>
+            </div>
+          </div> 
+          <div class="col-md-4 col-sm-12 event-card gift">
+            <div class="card">
+              <img src="images/event/gift_3.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h6 class="card-text text-center">베르나르 베르베르 한국어판 출간 30주년 기념 기획전 - 친필 사인 인쇄 펜트레이</h6>
+              </div>
+            </div>
+          </div> 
+          <div class="col-md-4 col-sm-12 event-card gift">
+            <div class="card">
+              <img src="images/event/gift_4.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h6 class="card-text text-center">전지적 푸바오 시점 : 아이러푸 에디션 출간! 푸바오 포토카드 증정</h6>
               </div>
             </div>
           </div> 
-            
-          <div class="col-md-4 col-sm-12">
+          <div class="col-md-4 col-sm-12 event-card gift">
             <div class="card">
-              <img src="images/event/event_3.jpg" class="card-img-top" alt="...">
+              <img src="images/event/gift_5.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h6 class="card-text text-center">[BOOKSTORY 단독] 김겨울 『언제나 다음 떡볶이가 기다리고 있지』 - 맥주잔 증정</h6>
+              </div>
+            </div>
+          </div>             
+          <div class="col-md-4 col-sm-12 event-card gift">
+            <div class="card">
+              <img src="images/event/gift_6.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h6 class="card-text text-center">『김변수와 시작하는 코딩생활 with C언어』 출간 기념 : 떡메모지 증정</h6>
+                  <h6 class="card-text text-center">『오컬트 3부작 : 장재현 각본집』 - '파묘 포토북' 및 초판 한정 감독 사인 인쇄본 증정</h6>
                 </div>
               </div>
             </div>
@@ -132,5 +155,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="event.js"></script>
 </body>
 </html>
